# bookstore

./: .coveragerc  .eslintignore  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Procfile  README.md  conftest.py  docker-compose-prod.yml  docker-compose-prod_template.yml  docker-compose.yml  env  noxfile.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run  setup.cfg
.github/workflows/: nox-audit_multi-arch.yml  nox-coverage.yml  nox-lint_multi-arch.yml  nox-safety_multi-arch.yml
accounts/: forms.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_groups_alter_customuser_is_active.py  0003_customuser_age_customuser_bio_customuser_country_and_more.py
accounts/tests/: test_core.py  test_views.py
books/: admin.py  models.py  tests.py  urls.py  views.py
books/config/: settings.py
books/migrations/: 0001_initial.py  0002_book_creator.py  0003_alter_book_options_review_date.py  0004_alter_review_review.py  0005_book_description.py  0006_rename_author_review_creator.py  0007_book_pubdate_book_publisher.py
books/tests/: factories.py  test_core.py  test_models.py  test_urls.py  test_views.py
code/books/: Dockerfile  Pipfile  docker-compose.yml
code/books/accounts/: tests.py
code/books/accounts/migrations/: 0001_initial.py
code/books/books/: tests.py  urls.py  views.py
code/books/books/migrations/: 0001_initial.py  0002_review.py  0003_book_cover.py  0004_alter_book_options.py  0005_book_id_index.py
code/books/config/: settings.py  urls.py
code/books/pages/: tests.py  urls.py
code/books/staticfiles/: staticfiles.json
code/books/templates/: _base.html  home.html
code/books/templates/account/: password_change.html
code/books/templates/account/email/: email_confirmation_message.txt  password_reset_key_message.txt
code/books/templates/books/: book_detail.html  book_list.html
code/hello/: Dockerfile  docker-compose.yml
code/hello/config/: settings.py
code/hello/pages/: urls.py  views.py
code/postgresql/: docker-compose.yml
code/postgresql/config/: settings.py
config/: settings.py  test.py  urls.py
docs/: add_book_list.md  add_book_list.rst  add_reviews.rst  conf.py  contributing.rst  features.rst  index.rst  installing.rst  package_index.rst  testing.rst
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst
docs/source/configuration/: env_setup.rst
docs/source/features/: application_features.rst
docs/source/installation/: index.rst
docs/source/testing/: index.rst
htmlcov/: class_index.html  coverage.json  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_bfce89227896c105_test_models_py.html  d_bfce89227896c105_test_urls_py.html  d_bfce89227896c105_test_views_py.html  d_cb0ba35d8fd42a04_admin_py.html  d_cb0ba35d8fd42a04_apps_py.html  d_cb0ba35d8fd42a04_models_py.html  d_cb0ba35d8fd42a04_sitemaps_py.html  d_cb0ba35d8fd42a04_urls_py.html  d_cb0ba35d8fd42a04_views_py.html  d_dfdacaa496597cde_test_core_py.html  d_dfdacaa496597cde_test_forms_py.html  d_dfdacaa496597cde_test_models_py.html  d_dfdacaa496597cde_test_urls_py.html  d_dfdacaa496597cde_test_views_py.html  function_index.html  index.html  status.json  z_1ea838694151cac8_test_py.html  z_1ea838694151cac8_urls_py.html  z_509fd8af0f7a1b49_admin_py.html  z_509fd8af0f7a1b49_apps_py.html  z_509fd8af0f7a1b49_forms_py.html  (+25 more)
pages/: tests.py
pages/tests/: test_views.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/css/: base.1323a00f074c.css  base.873a32388e5a.css  base.91c13fc0aed8.css
templates/: _base.html  base.html  home.html
templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  user_detail.html
templates/account/email/: email_confirmation_message.txt
templates/account/snippets/: already_logged_in.html
templates/admin/: base_site.html
templates/books/: book_add.html  book_detail.html  book_form.html  book_list.html  review_confirm_delete.html  review_detail.html  review_form.html  review_list.html  search_results.html
templates/pages/: home.html  success.html
templates/reviews/: review_create.html  review_delete.html  review_detail.html  review_form.html  review_list.html  review_update.html
