[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "A Django based web application"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
environs = {extras = ["django"], version = "^9.5.0"}
psycopg2-binary = "^2.9.3"
django-crispy-forms = "^1.14.0"
django-allauth = "^0.50.0"
Pillow = "^9.1.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
django-debug-toolbar = "^3.2.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
