[metadata]
name = bookstore
version = attr: django.__version__
url = https://www.djangoproject.com/
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = A high-level Python web framework that encourages rapid development and clean, pragmatic design.
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
project_urls =
    Source = https://github.com/kevinbowen777/bookstore/

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    asgiref >= 3.4.1
    backports.zoneinfo; python_version<"3.9"
    sqlparse >= 0.2.2
    tzdata; sys_platform == 'win32'

[options.extras_require]
argon2 = argon2-cffi >= 19.1.0
bcrypt = bcrypt

[flake8]
exclude = build,.git,.tox,./tests/.env,/migrations/
extend-ignore = E203
max-line-length = 119
per-file-ignores =
    code/books/accounts/migrations/0001_initial.py:E501

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = django
