[metadata]
name = bookstore
version = attr: django.__version__
url = https://github.com/kevinbowen777/bookstore
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = A online booksite created with Django web framework & Docker
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
project_urls =
    Source = https://github.com/kevinbowen777/bookstore/

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django >= 4.0.3

[flake8]
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude =
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    staticfiles/,
    build,
    .env,
    accounts/migrations/*,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    # bare except
    E722
max-line-length = 79
per-file-ignores =
    # __init__ exports names
    # app/errors/__init__.py:F401
    # app/__init__.py:F401
    # app/main/__init__.py:F401
    # app/api/__init__.py:F401
    # app/auth/__init__.py:F401
    # app/fake.py: F401
    # See: https://www.flake8rules.com/rules/W503.html
    # app/api/users.py:W503

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = django
